--- a/style.css
+++ b/style.css
@@ -1,21 +1,22 @@
 		* {
 			box-sizing: border-box;
+			font-family: 'Slabo 27px', serif;
+
 		}
 
 		html,
 		body {
 			height: 100%;
+
 		}
 
 		body {
-			font-size: 2em;
+			
 			align-items: center;
 			justify-content: center;
 			vertical-align: center;
 			align-content: center;
 		}
-
-
 
 		.blink_me {
 		  animation: blinker 1s linear infinite;
@@ -28,23 +29,31 @@
 		}
 
 		.Rules{
-			font-size: 0.5em;
+			font-size: 1.5em;
 			align-content: center;
 			margin: auto;
 			justify-content: center;
 		}
 
 		.playerChoice{
+			display: block;
 			align-content: center;
-			margin: auto;
+			margin-left: auto;
+			margin-right: auto;
+			margin-bottom: 1.5vw;
 			justify-content: center;
 			font-size:.5em;
-			width:75%;
+ 			padding: 1.5vw;
+ 			width:50%;
+ 			border-radius: 5px;
+ 			background-color:#E3E4E3;
+ 			font-size: 1.5em;
+
 		}
 
 
 		#inGameAnnouncement{
-			font-size: 1em;
+			font-size: 1.5em;
 			//color: red;
 			align-content: center;
 			margin: auto;
@@ -52,15 +61,12 @@
 			text-align: center;
 			width:75%;
 		}
-		#Ending{
-
-
-		}
-
+		
 
 
 		.gameContainer {	
 			background-color: yellow;
+			//height: 70vh;
 		}
 
 
